# imgflip-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: __init__.py  server.py
src/imgflip_mcp/: __init__.py  api.py  server.py
