
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgflip-mcp"
version = "1.0.0"
description = "Meme Creation Platform - MCP server for Imgflip"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.8.0",
    "mcp-server>=0.1.0"
]

[project.scripts]
imgflip-mcp = "src.server:cli"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]