[project]
name = "imgflip-mcp"
version = "0.1.0"
description = "Meme Creation Platform using Imgflip API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "aiohttp>=3.11.14",
 "dotenv>=0.9.9",
 "mcp>=1.6.0",
]

authors = [
  {name = "aviral-x", email="aviral@redblock.ai"},
  {name = "basrizk", email = "basem@redblock.ai"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
imgflip-mcp = "imgflip_mcp:main"



[tool.uv.workspace]
members = ["project/imgflip-mcp"]
